# SIGK26_zespol10

./: .gitignore  README.md  pyproject.toml  results.txt  results_upscaling.txt  train_denoising.py  train_upscaling.py  upscaling_README.md
lab2/: create_final_comparison.py  evaluate.py  merge_and_compare.py  pyproject.toml  report.md  train.py  train_synthetic.py
lab2/models/: exposure_synthesizer.py
lab2/utils/: dataset.py  hdr.py  metrics.py
src/denoising/: __init__.py
src/denoising/dataset/: __init__.py  div2k.py
src/denoising/methods/: __init__.py  bilateral.py  nlm.py
src/denoising/models/: __init__.py  denoising_autodecoder.py
src/upscaling/: dataset.py  models.py
