[tool.poetry]
name = "hdr-synthesis"
version = "0.1.0"
description = "HDR image synthesis from LDR"
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "^2.4.4"
torch = "^2.11.0"
tqdm = "^4.67.3"
opencv-python = "^4.13.0.92"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
